force-app/main/default/objects/DMAPP__DM_Usage__c/DMAPP__DM_Usage__c.object-meta.xml
<CustomObject>
    <description>NO CONFIGURATION SUPPORT 

This object stores information about user activity on the various dealmaker screens. It is intended for use by customers wish to report on the uptake of Dealmaker by their users.</description>
    <label>Dealmaker Usage</label>
    <nameField>
        <label>DM Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealmaker Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>