force-app/main/default/objects/DMAPP__DM_Usage__c/fields/DMAPP__Politics__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Politics__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Politics</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>